- desk/deskdir.c desk/deskfpd.c desk/deskfpd.h desk/deskfun.c
  desk/deskinf.c: Ensure F_FAKE/F_DESKTOP #defines are only used if DESK1
  is not #defined. (RFB)

2012-03-15
- vdi/vdi_fill.c: Fixed crash in GemAmigo due to stack overflow. Contributed
  by David Savinkoff. (RFB)

2012-03-17
- aes/asmstruct.h aes/gemasm.S: Move #defines to separate header file for
  inclusion by other .S files. (RFB)
- aes/gemdosif.S aes/gemstart.S: Replaced hard-coded offsets with #defines. (RFB)
- aes/struct.h: Fix UDA definition to include field used by trapaes. (RFB)

2012-03-20
- desk/deskapp.c desk/deskapp.h desk/deskmain.c desk/desktop.dfn
  desk/desktop.rsc: Removed unused STNOFILE alert from desktop resource. (RFB)

2012-03-22
- vdi/vdi_fill.c: Code cleanup: moved declaration to start of block.
  Contributed by David Savinkoff. (RFB)
- bios/startup.S: Reduced startup stack size to 1024 words. (RFB)
- vdi/vdi_fill.c: Improved polygon fill by rounding calculation of edge
  intersections. Contributed by David Savinkoff. (RFB)

2012-03-24
- vdi/vdi_line.c: Reorganised code to simplify future changes. (RFB)

2012-03-25
- bios/ikbd.c bios/tosvars.S: Moved _shifty to first 32K of memory to
  circumvent GFA crash. (RFB)

2012-03-26
- doc/bugs.txt vdi/vdi_line.c: Fixed line drawing in transparent mode. (RFB)
- vdi/vdi_text.c: Improved text scaling by vst_height(). Contributed by
  David Savinkoff. (RFB)
- vdi/vdi_text.c: Code cleanup: simplified code. Contributed by David
  Savinkoff. (RFB)

2012-03-29
- vdi/vdi_line.c: Code cleanup: all drawing modes for draw_rect() now
  use the same code structure. (RFB)

2012-03-30
- vdi/vdi_line.c: Code cleanup: simplified draw_rect(). (RFB)

2012-04-05
- vdi/vdi_line.c: Rewrote draw_rect() again to restore performance. (RFB)
- vdi/vdi_bezier.c vdi/vdi_defs.h vdi/vdi_fill.c vdi/vdi_gdp.c
  vdi/vdi_line.c vdi/vdi_text.c: Fixed GDP functions to draw text
  underlines & perimeters in the correct colour. (RFB)